@@ -1,11 +1,9 @@
 import React, { useEffect, useState } from "react";
 import { useLocation } from "react-router-dom";
 import { listReservations } from "../utils/api";
-import { listTables } from "../utils/api";
 import ReservationView from "../Components/Reservations/ReservationView";
 import NavDateButtons from "../Components/Buttons";
 import ErrorAlert from "../layout/ErrorAlert";
-import TableView from "../Components/Tables/TableView";
 
 /**
  * Defines the dashboard page.
@@ -17,8 +15,6 @@ import TableView from "../Components/Tables/TableView";
 function Dashboard({ date }) {
   const [reservations, setReservations] = useState([]);
   const [reservationsError, setReservationsError] = useState(null);
-  const [tables, setTables] = useState([]);
-  const [tablesError, setTablesError] = useState(null);
   
   const location = useLocation();
   const queryParams = new URLSearchParams(location.search);
@@ -27,28 +23,14 @@ function Dashboard({ date }) {
     date = dateParam;
   }
 
-  // useEffect(loadDashboard, [date]);
-  useEffect(loadReservations, [date]);
+  useEffect(loadDashboard, [date]);
 
-  // function loadDashboard() {
-    function loadReservations() {
+  function loadDashboard() {
     const abortController = new AbortController();
     setReservationsError(null);
     listReservations({ date }, abortController.signal)
       .then(setReservations)
       .catch(setReservationsError);
-
-    return () => abortController.abort();
-  }
-
-  useEffect(loadTables);
-
-  function loadTables() {
-    const abortController = new AbortController();
-    setTablesError(null);
-    listTables(tables, abortController.signal)
-    .then(setTables)
-    .catch(setTablesError);
 
     return () => abortController.abort();
   }
@@ -60,30 +42,29 @@ function Dashboard({ date }) {
         <h4 className="mb-0">Reservations for date </h4>
       </div>
       <ErrorAlert error={reservationsError} />
+      <div>
       <table className="mt-5 col-8">
         <thead>
+          <tr>
           <th>Last Name</th>
           <th>First Name</th>
           <th>Mobile Number</th>
           <th># in Party</th>
           <th>Reservation Date</th>
           <th>Reservation Time</th>
+          </tr>
         </thead>
         <tbody>
           {reservations.map((reservation, index) => (
-            <ReservationView reservation={reservation} index={index} />
+            <ReservationView reservation={reservation} index={index} key={index}/>
           ))}
         </tbody>
       </table>
+      </div>
       <div>
         <NavDateButtons />
       </div>
-<div className="container-fluid mt-3 border border-success">
-  Tables
-  {tables.map((table, index) => (
-    <TableView table={table} index={index} />
-  ))}
-</div>
+
     </main>
   );
 }
